test_yuriiq/catalog/language/russian/account/forgotten.php
<?php

// text
$_['text_account']	= 'Личный Кабинет';
$_['text_forgotten']	= 'Забытый пароль?';
$_['text_success']	= 'Новый пароль был выслан на Ваш адрес электронной почты.';
$_['text_email']	= 'Введите адрес электронной почты Вашей учетной записи. Нажмите кнопку Продолжить, чтобы получить пароль по электронной почте.';
$_['text_your_email']	= 'Ваш E-Mail';

// error
$_['error_email']	= 'E-Mail адрес не найден, проверьте и попробуйте ещё раз!';

// entry
$_['entry_email']	= 'E-Mail:';

// heading
$_['heading_title']	= 'Забыли пароль?';
?>